--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Anqi Wang"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/1004111751646425_.pic.jpg"
   bio              : "Hong Kong University of Technology and Science"
   location         : "Hong Kong SAR"
   employer         :
