--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Anqi Wang"
   avatar           : "images/1004111751646425_.pic.jpg"
-  bio              : "Hong Kong University of Technology and Science"
+  bio              : # "Hong Kong University of Technology and Science"
   location         : "Hong Kong SAR"
   employer         :
   pubmed           : 
