--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Anqi Wang"
   avatar           : "images/1004111751646425_.pic.jpg"
-  bio              : # "Hong Kong University of Technology and Science"
+  bio              : "Division of Emerging Interdisciplinary Area, Hong Kong University of Technology and Science"
   location         : "Hong Kong SAR"
   employer         :
   pubmed           : 
@@ -43,7 +43,7 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : # e.g., "linkedin username"
+  linkedin         : # anqi-wang-34a838223
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
@@ -55,7 +55,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          :
+  youtube          : https://www.youtube.com/@anqiwang8113
   wikipedia        :
 
 
