--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : @anqiwang8113
+  youtube          : 
   wikipedia        :
 
 
