--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Anqi Wang - personal page"
+title                    : "Anqi Wang (王安芑) - personal page"
 description              : "Ph.D. candidate at Division of Emerging Interdisciplinary Area, Hong Kong University of Science and Technology."
 repository               : "Arrowanneee/arrowanneee.github.io"
 google_scholar_stats_use_cdn : true
