--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Anqi Wang"
-  avatar           : "images/1004111751646425_.pic.jpg"
+  avatar           : "images/profile.jpg"
   bio              : #"Ph.D candidate at Division of Emerging Interdisciplinary Area, Hong Kong University of Technology and Science"
   location         : "Hong Kong SAR"
   employer         :
